--- a/YLoader.csproj
+++ b/YLoader.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{FFB6CE10-A2CB-47C2-A7BA-93D155637B98}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>YLoader</RootNamespace>
-    <AssemblyName>YLoader</AssemblyName>
+    <AssemblyName>YT Autoposting</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -49,7 +49,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>y-demo-icon.ico</ApplicationIcon>
+    <ApplicationIcon>Code\y-demo-icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -66,38 +66,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Methods.cs">
+    <Compile Include="Code\Methods.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Code\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Code\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="Code\Form2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
+    <Compile Include="Code\Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Graphik.cs" />
-    <Compile Include="GraphikMaker.cs">
+    <Compile Include="Code\Graphik.cs" />
+    <Compile Include="Code\GraphikMaker.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Playlist.cs" />
-    <Compile Include="Playlist_s.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Code\Playlist.cs" />
+    <Compile Include="Code\Playlist_s.cs" />
+    <Compile Include="Code\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VideoFile.cs" />
-    <Compile Include="YTStaff.cs">
+    <Compile Include="Code\VideoFile.cs" />
+    <Compile Include="Code\YTStaff.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Content Include="y-demo-icon.ico" />
-    <EmbeddedResource Include="Form1.resx">
+    <Content Include="Code\y-demo-icon.ico" />
+    <EmbeddedResource Include="Code\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
+    <EmbeddedResource Include="Code\Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -110,7 +110,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Content Include="client_secrets.json">
+    <Content Include="Code\client_secrets.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\Settings.settings">
@@ -124,7 +124,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Code\App.config" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Core.Google.GData.Extensions">
